--- a/chat_som/templates/course_list.html
+++ b/chat_som/templates/course_list.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <h1 style="padding-bottom: 10px;">Course List</h1>
-    <table class="table table-hover">
+    <table class="table table-hover course-table">
         <thead>
             <tr>
                 <th scope="col">Course ID</th>
@@ -34,8 +34,8 @@
                     <td>{{ course.faculty }}</td>
                     <td>{{ course.room }}</td>
                     <td>{{ course.section }}</td>
-                    <td>{{ course.syllabus }}</td>
-                    <td>{{ course.old_syllabus }}</td>
+                    <td><a href="{{ course.syllabus }}">View Syllabus</a></td>
+                    <td><a href="{{ course.old_syllabus }}">View Old Syllabus</a></td>
                 </tr>
             {% endfor %}
         </tbody>
