--- a/chat_som/templates/layout.html
+++ b/chat_som/templates/layout.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/index">Chat Bot</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/">Chat Bot</a></li>
                             <li class="nav-item"><a class="nav-link" href="/course_list">Course List</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
